# Data-Centric-Real-Estate-Intelligence-Framework

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  research_upgrade.md
.github/workflows/: ci.yml  data-contracts.yml  nightly-smoke.yml  release.yml
archive/legacy_validation/: README.md
configs/: base.yaml  colab.yaml  github_actions.yaml  local.yaml
data/registry/: data_manifest.json  schema_contract.json
docs/methodology/: safeguards.md
docs/reporting/: figure_inventory.md  final_submission_summary.md  official_metrics.md  table_inventory.md
docs/roadmap/: README.md  future_architecture_notes.md
notebooks/: 01_dc_reif_king_county.ipynb
notebooks/roadmap/: 01_data_audit.ipynb  02_market_representation.ipynb  03_valuation_core.ipynb  04_uncertainty_and_anomaly.ipynb  05_report_ready_outputs.ipynb  README.md
outputs/final_report_pack/: 02_results_summary_table.csv  03_anomaly_summary_table.csv  (+14 more)
scripts/: bootstrap_env.sh  build_diagnostics.py  build_report_results.py  download_data.py  run_market_representation.py  run_pipeline.py  run_tests.sh  run_uncertainty_calibration.py  smoke_test.sh
tests/: conftest.py  test_diagnostics.py  test_feature_store.py  test_features.py  test_governance.py  test_market_representation.py  test_pipeline.py  test_preprocessing.py  test_report_results.py  test_reporting.py  test_schema.py  test_splitting.py  test_uncertainty.py  test_valuation_core.py
(+85 files in other folders)
