[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-reif"
version = "0.1.0"
description = "Data-Centric Real Estate Intelligence Framework for King County house sales"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "joblib>=1.3",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "nbformat>=5.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
  "shap>=0.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

